<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pro250.mobiledungeon.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_items"
        android:name="pro250.mobiledungeon.ui.items.ItemFragment"
        android:label="@string/menu_items"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@+id/nav_tutorial"
        android:name="pro250.mobiledungeon.ui.tutorials.TutorialFragment"
        android:label="@string/menu_tutorial"
        tools:layout="@layout/fragment_tutorial" />
    <fragment
        android:id="@+id/nav_achievements"
        android:name="pro250.mobiledungeon.ui.achievements.AchievementFragment"
        android:label="@string/achievements"
        tools:layout="@layout/fragment_achievement" />
    <fragment
        android:id="@+id/nav_location"
        android:name="pro250.mobiledungeon.ui.location.LocationFragment"
        android:label="@string/locations"
        tools:layout="@layout/fragment_location" />
    <fragment
        android:id="@+id/nav_commands"
        android:name="pro250.mobiledungeon.ui.commands.CommandFragment"
        android:label="@string/commands"
        tools:layout="@layout/fragment_command" />
</navigation>